Git_WGBH_QC/src/objects/TA_Upload__c.object
<CustomObject>
    <description>This object contains TA updates to be syncronized</description>
    <fields>
        <fullName>ACCOUNT_CATEGORY__c</fullName>
        <label>ACCOUNT_CATEGORY</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_ID__c</fullName>
        <label>ACCOUNT_ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_TYPE__c</fullName>
        <label>ACCOUNT_TYPE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRESS_ID_A1__c</fullName>
        <label>ADDRESS_ID_A1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRESS_ID_A2__c</fullName>
        <label>ADDRESS_ID_A2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRESS_ID_A3__c</fullName>
        <label>ADDRESS_ID_A3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRESS_TYPE_A1__c</fullName>
        <label>ADDRESS_TYPE_A1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRESS_TYPE_A2__c</fullName>
        <label>ADDRESS_TYPE_A2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRESS_TYPE_A3__c</fullName>
        <label>ADDRESS_TYPE_A3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALT_ACCOUNT_ID__c</fullName>
        <label>ALT_ACCOUNT_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APARTMENT_Long_A1__c</fullName>
        <label>APARTMENT_Long_A1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APARTMENT_Long_A2__c</fullName>
        <label>APARTMENT_Long_A2</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APARTMENT_Long_A3__c</fullName>
        <label>APARTMENT_Long_A3</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIRTH_DAY_1N__c</fullName>
        <label>BIRTH_DAY_1N</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BIRTH_DAY_2N__c</fullName>
        <label>BIRTH_DAY_2N</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BIRTH_MONTH_1N__c</fullName>
        <label>BIRTH_MONTH_1N</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BIRTH_MONTH_2N__c</fullName>
        <label>BIRTH_MONTH_2N</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BIRTH_YEAR_1N__c</fullName>
        <label>BIRTH_YEAR_1N</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BIRTH_YEAR_2N__c</fullName>
        <label>BIRTH_YEAR_2N</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CITY_A1__c</fullName>
        <label>CITY_A1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY_A2__c</fullName>
        <label>CITY_A2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY_A3__c</fullName>
        <label>CITY_A3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLASSIFICATION_CODE_C1__c</fullName>
        <label>CLASSIFICATION_CODE_C1</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLASSIFICATON_VALUE_C1__c</fullName>
        <label>CLASSIFICATON_VALUE_C1</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACT_CATEGORY_I1__c</fullName>
        <label>CONTACT_CATEGORY_I1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACT_DATE_I1__c</fullName>
        <label>CONTACT_DATE_I1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACT_TYPE_I1__c</fullName>
        <label>CONTACT_TYPE_I1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTRY_A1__c</fullName>
        <label>COUNTRY_A1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTRY_A2__c</fullName>
        <label>COUNTRY_A2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTRY_A3__c</fullName>
        <label>COUNTRY_A3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DECEASED_DAY_1N__c</fullName>
        <label>DECEASED_DAY_1N</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DECEASED_DAY_2N__c</fullName>
        <label>DECEASED_DAY_2N</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DECEASED_FLAG_1N__c</fullName>
        <label>DECEASED_FLAG_1N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DECEASED_FLAG_2N__c</fullName>
        <label>DECEASED_FLAG_2N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DECEASED_MONTH_1N__c</fullName>
        <label>DECEASED_MONTH_1N</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DECEASED_MONTH_2N__c</fullName>
        <label>DECEASED_MONTH_2N</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DECEASED_YEAR_1N__c</fullName>
        <label>DECEASED_YEAR_1N</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DECEASED_YEAR_2N__c</fullName>
        <label>DECEASED_YEAR_2N</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_A1__c</fullName>
        <label>DO_UPDATES_A1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_A2__c</fullName>
        <label>DO_UPDATES_A2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_A3__c</fullName>
        <label>DO_UPDATES_A3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_C1__c</fullName>
        <label>DO_UPDATES_C1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_E1__c</fullName>
        <label>DO_UPDATES_E1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_E2__c</fullName>
        <label>DO_UPDATES_E2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_N0__c</fullName>
        <label>DO_UPDATES_N0</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_N1__c</fullName>
        <label>DO_UPDATES_N1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_N2__c</fullName>
        <label>DO_UPDATES_N2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_R1__c</fullName>
        <label>DO_UPDATES_R1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_S1__c</fullName>
        <label>DO_UPDATES_S1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_T1__c</fullName>
        <label>DO_UPDATES_T1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_T2__c</fullName>
        <label>DO_UPDATES_T2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_UPDATES_T3__c</fullName>
        <label>DO_UPDATES_T3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL_ADDRESS_E1__c</fullName>
        <label>EMAIL_ADDRESS_E1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL_ADDRESS_E2__c</fullName>
        <label>EMAIL_ADDRESS_E2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL_ID_E1__c</fullName>
        <label>EMAIL_ID_E1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL_ID_E2__c</fullName>
        <label>EMAIL_ID_E2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL_TYPE_E1__c</fullName>
        <label>EMAIL_TYPE_E1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL_TYPE_E2__c</fullName>
        <label>EMAIL_TYPE_E2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>END_DATE_C1__c</fullName>
        <label>END_DATE_C1</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTRA_LINE_1_A1__c</fullName>
        <label>EXTRA_LINE_1_A1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTRA_LINE_1_A2__c</fullName>
        <label>EXTRA_LINE_1_A2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTRA_LINE_1_A3__c</fullName>
        <label>EXTRA_LINE_1_A3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIRST_NAME_1N__c</fullName>
        <label>FIRST_NAME_1N</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIRST_NAME_2N__c</fullName>
        <label>FIRST_NAME_2N</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FROM_DATE_A1__c</fullName>
        <label>FROM_DATE_A1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FROM_DATE_A2__c</fullName>
        <label>FROM_DATE_A2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FROM_DATE_A3__c</fullName>
        <label>FROM_DATE_A3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GENDER_1N__c</fullName>
        <label>GENDER_1N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GENDER_2N__c</fullName>
        <label>GENDER_2N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_TYPE__c</fullName>
        <label>ID_TYPE</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSIDE_SALUTATION_S1__c</fullName>
        <label>INSIDE_SALUTATION_S1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOB_TITLE_1N__c</fullName>
        <label>JOB_TITLE_1N</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOB_TITLE_2N__c</fullName>
        <label>JOB_TITLE_2N</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_NAME_0__c</fullName>
        <label>LAST_NAME_0</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_NAME_1N__c</fullName>
        <label>LAST_NAME_1N</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_NAME_2N__c</fullName>
        <label>LAST_NAME_2N</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LONG_COMMENTS_I1__c</fullName>
        <label>LONG_COMMENTS_I1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MIDDLE_NAME_1N__c</fullName>
        <label>MIDDLE_NAME_1N</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIDDLE_NAME_2N__c</fullName>
        <label>MIDDLE_NAME_2N</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_ID_0__c</fullName>
        <label>NAME_ID_0</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAME_ID_1N__c</fullName>
        <label>NAME_ID_1N</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_ID_2N__c</fullName>
        <label>NAME_ID_2N</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_ID_A1__c</fullName>
        <label>NAME_ID_A1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_ID_A2__c</fullName>
        <label>NAME_ID_A2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_ID_A3__c</fullName>
        <label>NAME_ID_A3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_ID_C1__c</fullName>
        <label>NAME_ID_C1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAME_ID_E1__c</fullName>
        <label>NAME_ID_E1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAME_ID_E2__c</fullName>
        <label>NAME_ID_E2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAME_ID_I1__c</fullName>
        <label>NAME_ID_I1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_ID_R1__c</fullName>
        <label>NAME_ID_R1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAME_ID_S1__c</fullName>
        <label>NAME_ID_S1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_ID_T1__c</fullName>
        <label>NAME_ID_T1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAME_ID_T2__c</fullName>
        <label>NAME_ID_T2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_ID_T3__c</fullName>
        <label>NAME_ID_T3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_PHONE_T1__c</fullName>
        <label>NO_PHONE_T1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NO_PHONE_T2__c</fullName>
        <label>NO_PHONE_T2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NO_PHONE_T3__c</fullName>
        <label>NO_PHONE_T3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_ADDRESS_A1__c</fullName>
        <label>PREFERRED_ADDRESS_A1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_ADDRESS_A2__c</fullName>
        <label>PREFERRED_ADDRESS_A2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_ADDRESS_A3__c</fullName>
        <label>PREFERRED_ADDRESS_A3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_DURING_DATES_A1__c</fullName>
        <label>PREFERRED_DURING_DATES_A1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_DURING_DATES_A2__c</fullName>
        <label>PREFERRED_DURING_DATES_A2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_DURING_DATES_A3__c</fullName>
        <label>PREFERRED_DURING_DATES_A3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_EMAIL_E1__c</fullName>
        <label>PREFERRED_EMAIL_E1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_EMAIL_E2__c</fullName>
        <label>PREFERRED_EMAIL_E2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_TELEPHONE_T1__c</fullName>
        <label>PREFERRED_TELEPHONE_T1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_TELEPHONE_T2__c</fullName>
        <label>PREFERRED_TELEPHONE_T2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_TELEPHONE_T3__c</fullName>
        <label>PREFERRED_TELEPHONE_T3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY_NAME_FLAG_1N__c</fullName>
        <label>PRIMARY_NAME_FLAG_1N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY_NAME_FLAG_2N__c</fullName>
        <label>PRIMARY_NAME_FLAG_2N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROGRAM_I1__c</fullName>
        <label>PROGRAM_I1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RECORD_SEQ__c</fullName>
        <label>RECORD_SEQ</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RECORD_TYPE__c</fullName>
        <label>RECORD_TYPE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RELATED_ACCOUNT_ID_R1__c</fullName>
        <label>RELATED_ACCOUNT_ID_R1</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RELATED_NAME_ID_R1__c</fullName>
        <label>RELATED_NAME_ID_R1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RELATIONSHIP_CATEGORY_R1__c</fullName>
        <label>RELATIONSHIP_CATEGORY_R1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RELATIONSHIP_TYPE_R1__c</fullName>
        <label>RELATIONSHIP_TYPE_R1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RESPONSE_CATEGORY_I1__c</fullName>
        <label>RESPONSE_CATEGORY_I1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RESPONSE_DATE_I1__c</fullName>
        <label>RESPONSE_DATE_I1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RESPONSE_TYPE_I1__c</fullName>
        <label>RESPONSE_TYPE_I1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALUTATION_CODE_S1__c</fullName>
        <label>SALUTATION_CODE_S1</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALUTATION_FLAG_1N__c</fullName>
        <label>SALUTATION_FLAG_1N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALUTATION_FLAG_2N__c</fullName>
        <label>SALUTATION_FLAG_2N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALUTATION_LINE_1_S1__c</fullName>
        <label>SALUTATION_LINE_1_S1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALUTATION_LINE_2_S1__c</fullName>
        <label>SALUTATION_LINE_2_S1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALUTATION_LINE_3_S1__c</fullName>
        <label>SALUTATION_LINE_3_S1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ACCOUNT_CATEGORY__c</fullName>
        <label>SFDC_ACCOUNT_CATEGORY__c</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ADDRESS_ID__c</fullName>
        <label>SFDC_ADDRESS_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_CASE_ORIGIN__c</fullName>
        <label>SFDC_CASE_ORIGIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_CASE_SUBTOPIC__c</fullName>
        <label>SFDC_CASE_SUBTOPIC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_CASE_TOPIC__c</fullName>
        <label>SFDC_CASE_TOPIC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_CASE_TYPE__c</fullName>
        <label>SFDC_CASE_TYPE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_EXTERNAL_ID__c</fullName>
        <label>SFDC_EXTERNAL_ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ID__c</fullName>
        <description>SalesForce Id</description>
        <label>SFDC_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PKEY__c</fullName>
        <label>SFDC_PKEY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_UPDATE_TYPE__c</fullName>
        <label>SFDC_UPDATE_TYPE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STAFF_I1__c</fullName>
        <label>STAFF_I1</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STAFF__c</fullName>
        <label>STAFF</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>START_DATE_C1__c</fullName>
        <label>START_DATE_C1</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE_A1__c</fullName>
        <label>STATE_A1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE_A2__c</fullName>
        <label>STATE_A2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE_A3__c</fullName>
        <label>STATE_A3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STREET_Long_A1__c</fullName>
        <label>STREET_Long_A1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STREET_Long_A2__c</fullName>
        <label>STREET_Long_A2</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STREET_Long_A3__c</fullName>
        <label>STREET_Long_A3</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STREET_NAME_A1__c</fullName>
        <label>STREET_NAME_A1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STREET_NAME_A2__c</fullName>
        <label>STREET_NAME_A2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STREET_NAME_A3__c</fullName>
        <label>STREET_NAME_A3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_A1__c</fullName>
        <label>STS_A1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_A2__c</fullName>
        <label>STS_A2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_A3__c</fullName>
        <label>STS_A3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_C1__c</fullName>
        <label>STS_C1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_E1__c</fullName>
        <label>STS_E1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_E2__c</fullName>
        <label>STS_E2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_I1__c</fullName>
        <label>STS_I1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_T1__c</fullName>
        <label>STS_T1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_T2__c</fullName>
        <label>STS_T2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_T3__c</fullName>
        <label>STS_T3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUFFIX_1N__c</fullName>
        <label>SUFFIX_1N</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUFFIX_2N__c</fullName>
        <label>SUFFIX_2N</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUMMARY_I1__c</fullName>
        <label>SUMMARY_I1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECHNIQUE_I1__c</fullName>
        <label>TECHNIQUE_I1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE_EXTENSION_T1__c</fullName>
        <label>TELEPHONE_EXTENSION_T1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE_EXTENSION_T2__c</fullName>
        <label>TELEPHONE_EXTENSION_T2</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE_EXTENSION_T3__c</fullName>
        <label>TELEPHONE_EXTENSION_T3</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE_ID_T1__c</fullName>
        <label>TELEPHONE_ID_T1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE_ID_T2__c</fullName>
        <label>TELEPHONE_ID_T2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE_ID_T3__c</fullName>
        <label>TELEPHONE_ID_T3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE_Long_T1__c</fullName>
        <label>TELEPHONE_Long_T1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE_Long_T2__c</fullName>
        <label>TELEPHONE_Long_T2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE_Long_T3__c</fullName>
        <label>TELEPHONE_Long_T3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE_TYPE_T1__c</fullName>
        <label>TELEPHONE_TYPE_T1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE_TYPE_T2__c</fullName>
        <label>TELEPHONE_TYPE_T2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE_TYPE_T3__c</fullName>
        <label>TELEPHONE_TYPE_T3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THROUGH_DATE_A1__c</fullName>
        <label>THROUGH_DATE_A1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THROUGH_DATE_A2__c</fullName>
        <label>THROUGH_DATE_A2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THROUGH_DATE_A3__c</fullName>
        <label>THROUGH_DATE_A3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITLE_1N__c</fullName>
        <label>TITLE_1N</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITLE_2N__c</fullName>
        <label>TITLE_2N</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WARNING_I1__c</fullName>
        <label>WARNING_I1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WARN_EXPIRE_DATE_I1__c</fullName>
        <label>WARN_EXPIRE_DATE_I1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_CODE_A1__c</fullName>
        <label>ZIP_CODE_A1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_CODE_A2__c</fullName>
        <label>ZIP_CODE_A2</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_CODE_A3__c</fullName>
        <label>ZIP_CODE_A3</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_EXTENSION_A1__c</fullName>
        <label>ZIP_EXTENSION_A1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_EXTENSION_A2__c</fullName>
        <label>ZIP_EXTENSION_A2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_EXTENSION_A3__c</fullName>
        <label>ZIP_EXTENSION_A3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>TA Upload</label>
    <nameField>
        <label>TA Upload Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TA Upload Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>